Fix Files player menu icon "Import list to Music" adjustment to dark theme
At least on the recent Nextcloud versions (tested 27-29), the icon for the
popup menu item "Import list to Music" came from the cloud core instead of
our own CSS. Hence, its color got inverted twice in the dark theme, leading
to nigh-invisible icon. Made the CSS rule more specific to ensure that our
version of the icon is used instead of the core version.

--- a/css/embedded/files-music-player.css
+++ b/css/embedded/files-music-player.css
@@ -8,11 +8,11 @@
  * @copyright Pauli Järvinen 2017 - 2024
  */
 
-.icon-music-dark {
+#music-controls .icon-music-dark {
 	background-image: url(../../img/music-dark.svg);
 }
 
-.icon-radio-nav {
+#music-controls .icon-radio-nav {
 	background-image: url(../../img/radio.svg);
 }
 
